2010-11-11 Holger Nahrstaedt <nahrstaedt@control.tu-berlin.de>

	* rtai-lab/scilab/loader.sce: 
	* rtai-lab/scilab/macros/RTAI/loadmacros.sce:
	* rtai-lab/scilab/macros/Makefile:
	* rtai-lab/scilab/macros/scilab: New approach in including RTAI files
	  in scilab (same approach as for scicoslab).

2010-10-12 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/ipc/msg/msg.c; make rt_sendx_if usable form interrupt handlers.
 
2010-10-08 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-x86_64/rtai_fpu.h: upgrade to new FP link in thread
	  struct definition for > 2.6.34.

2010-10-06 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-i386/rtai_fpu.h: upgrade to new FP link in thread
	  struct definition for > 2.6.34.

2010-09-15 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* addons/drivers/serial/rtai_serial.h: make all declared prototypes 
          compilible in a lib.
	* rtai-py/rtai_ser.py: add RTAI serial support for python.

2010-09-09 Pierangelo Masarati <masarati@aero.polimi.it>
	* base/arch/x86_64/calibration/GNUmakefile.am,
	  base/arch/x86_64/calibration/GNUmakefile.in,
	  base/arch/x86_64/calibration/Makefile.kbuild:
	  sync'ed with i386
	* rtai-lab/scicoslab/GNUmakefile.am, rtai-lab/scicoslab/GNUmakefile.in:
	  sync'ed with vulcano
	* base/arch/i386/calibration/smi-module.c,
	  base/arch/x86_64/calibration/smi-module.c,::
	  #ifndef PCI_DEVICE_ID_INTEL_ICH10_1, for older kernel without it.

2010-08-23 Paolo Mantegazza <mantegazza@aero.polimi.it>

	* base/include/asm-i386/rtai_hal.h, base/include/asm-x86_64/rtai_hal.h: 
	  define a blank IPIPE_IRQ_DOALL when not defined yet.

2010-08-15 Paolo Mantegazza <mantegazza@aero.polimi.it>
	   suggested by Tommaso Falchi Delitala <volalto86@gmail.com>

	* addons/rtdm/rtdm.h: change RTAI_LXRT into RTDM_RTAI_LXRT to avoid 
	  naming conflicts

2010-06-29 Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scicoslab/macros/RTAI/RTAICodeGen_.sci: